# elevensw_takehome

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
adr/: ADR.md  AI-WORKFLOW.md
simulator/: fleet.yaml  generate_fleet.py  pyproject.toml
simulator/simulator/: __init__.py  chaos.py  device.py  fleet.py
simulator/tests/: test_chaos.py
src/: log.ts  server.ts  types.ts
src/api/: checkin.ts  events.ts  observability.ts
src/reconciler/: sweep.ts
src/state/: machine.ts  policy.ts
src/store/: migrate.ts  sqlite.ts
test/: drift-detection.test.ts  happy-path.test.ts  helpers.ts  idempotent-redelivery.test.ts  offline-recovery.test.ts  out-of-order.test.ts  permanent-give-up.test.ts  transient-retry.test.ts
