[project]
name = "device-simulator"
version = "0.1.0"
description = "Simulated device fleet that talks to the reconciler check-in endpoint."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
